.provarCaches/00D410000011HE0EAM/objects/rstk__sosubcontainer__c.object
<CustomObject>
    <description>sosubcontainer__c

Containers can be nested one within another.  This allows for an order to be boxed up in its own carton and then placed in a shipping container and sent on its way.  This table (subordinate to a given container) carries the linkage to the child containers

At the time a container/sub-container relationship is created, a check is made to ensure that there is not an endless loop of linkage.  To assist the ‘endless loop’ checking (see below) an arbitrary limit in the number of nesting levels has been set (currently 5).

If the user sets a tracking number on a container, it is driven down to the sub-containers.

Weights are rolled up to the parent container. (DD)</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sosubcontainer_comments__c</fullName>
        <description>User-defined comments associated with this particular relationship. (DD)</description>
        <inlineHelpText>These are the optional comments associated with this Sub-Container.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__sosubcontainer_soconatiner__c</fullName>
        <description>Identifies the parent container in the nested container relationship. (DD)</description>
        <inlineHelpText>This is the Parent Container associated with this Sub-Container</inlineHelpText>
        <label>Parent Container ID</label>
        <referenceTo>rstk__socontainer__c</referenceTo>
        <relationshipLabel>Sub-Container Detail</relationshipLabel>
        <relationshipName>Sub_Container_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sosubcontainer_subcontainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the child container in the nested container relationship. (DD)</description>
        <inlineHelpText>This is the ID of the Sub-Container</inlineHelpText>
        <label>Sub-Container ID</label>
        <referenceTo>rstk__socontainer__c</referenceTo>
        <relationshipLabel>Sub-Container Detail (Sub-Container ID)</relationshipLabel>
        <relationshipName>Sub_Container_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sub-Container Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Container Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>